# snowscrape

./: .gitignore  DEPLOYMENT.md  Dockerfile  README-Lambda.md  README.md  api_server.py  api_server.py.backup  commands.txt  deploy-aws-lambda.sh  deploy-comprehensive.sh  deploy-lambda.sh  dns-setup-instructions.sh  generate-requirements.sh  generate_forecast.py  get-cert-validation.sh  main.py  pyproject.toml  pyproject.toml.backup  requirements-lambda.txt  requirements.txt  samconfig.toml  setup-custom-domain.sh  snow_state.json  template-custom-domain.yaml  template.yaml  test_lambda_api.py  update-lambda.sh
.aws-sam/: build.toml
generated_forecasts/: ski_forecast_raw_20251101_222219.txt
lambda-deploy-20251206_134120/: Dockerfile  login_debug.html  requirements.txt  ski_forecast_raw_20251101_222350.txt  table_2_bot.csv
lambda-deploy-20251206_134439/: Dockerfile  lambda_config.py  ski_forecast_20251101_212854.html  ski_forecast_20251102_162339.html  table_3.csv
lambda-deploy-20251206_134534/: Dockerfile  debug_top_login.html  dynamic_forecast_top.csv  hourly_forecast_top.csv  ski_forecast_20251101_214450.html  ski_forecast_20251101_221055.html  ski_forecast_20251101_222350.html  ski_forecast_raw_20251101_222058.txt  table_3_bot.csv
lambda-deploy-20251206_134628/: requirements.txt  ski_forecast_20251101_212854.md  template.yaml
lambda-deploy-20251206_134708/: hourly_forecast_mid.csv  ski_forecast_raw_20251102_162339.txt  template.yaml
lambda-deploy-20251206_134738/: raw_hourly_forecast.html  ski_forecast_20251101_222219.html  table_3_top.csv
lambda-deploy-20251206_135252/: debug_mid_login.html  hourly_forecast_bot.csv  ski_forecast_20251101_222058.md  ski_forecast_raw_20251101_212854.txt
lambda-deploy-20251206_135316/: debug_bot_login.html  dynamic_forecast_bot.csv  dynamic_forecast_mid.csv  samconfig.toml  (+3 more)
(+87 files in other folders)
