[project]
name = "snowscrape"
version = "0.1.0"
description = "Login-aware Snow-Forecast scraper (Avoriaz 12-day mid) with CSV/JSON outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright",
  "beautifulsoup4",
  "lxml",
  "pandas",
  "python-dotenv"
]

[project.scripts]
scrape = "snowscrape.cli:main"
playwright-install = "snowscrape.cli:playwright_install"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

